WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198333
Reestablish WebSWClientConnection in case of network process crash
https://bugs.webkit.org/show_bug.cgi?id=198333
Summary
Reestablish WebSWClientConnection in case of network process crash
youenn fablet
Reported
2019-05-29 08:23:04 PDT
Reestablish WebSWClientConnection in case of network process crash
Attachments
Patch
(28.48 KB, patch)
2019-05-29 09:09 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-05-29 09:09:17 PDT
Created
attachment 370853
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-29 15:21:14 PDT
Comment on
attachment 370853
[details]
Patch Clearing flags on attachment: 370853 Committed
r245873
: <
https://trac.webkit.org/changeset/245873
>
WebKit Commit Bot
Comment 3
2019-05-29 15:21:16 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-05-29 15:22:14 PDT
<
rdar://problem/51239460
>
Truitt Savell
Comment 5
2019-05-30 14:51:18 PDT
It looks like the new test http/wpt/service-workers/service-worker-networkprocess-crash.html Added in
https://trac.webkit.org/changeset/245873/webkit
is failing and crashing. It also appears this patch caused multiple other flakey crashes. I was able to reproduce the failures on 245873 but not on 245872. History:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Fwpt%2Fservice-workers%2Fupdate-service-worker.https.html%20http%2Fwpt%2Fservice-workers%2Fuseragent.https.html%20http%2Fwpt%2Fservice-workers%2Fservice-worker-networkprocess-crash.html%20imported%2Fw3c%2Fweb-platform-tests%2FFileAPI%2Fhistorical.https.html%20http%2Fwpt%2Fcache-storage%2Fquota-third-party.https.html%20imported%2Fw3c%2Fweb-platform-tests%2Ffetch%2Fapi%2Fpolicies%2Freferrer-no-referrer-service-worker.https.html%20http%2Fwpt%2Fcrypto%2Faes-cbc-crash.any.worker.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug